Overhauled error handling throughout the project. Sorted the list of workspace projects in descending order of last modification. Cleaned up a lot of code to improve readability and get rid of nonsense.